# spoti2tg

./: .env.example  LICENSE  README.md  pyproject.toml
examples/: basic_run.py  playback_only.py
src/spoti2tg/: __init__.py  config.py  exceptions.py  models.py  playback.py  poster.py  spoti2tg.py  telegram_client.py  tracker.py  windows_media_client.py
